# Code-Challenge-Generator

./: .gitignore  README.md
backend/: database.db  pyproject.toml  server.py
backend/src/: ai_generator.py  app.py  test.py  util.py
backend/src/database/: db.py  models.py
backend/src/route/: challenge.py  webhooks.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/auth/: ClerkProviderWithRoute.jsx  authPage.jsx
frontend/src/challenge/: MCQChallenge.jsx  challengeGen.jsx
frontend/src/history/: historyPanel.jsx
frontend/src/layout/: LayOut.jsx
frontend/src/utils/: api.js
